manifests/seraphim/prod/adventurelog/Namespace-adventurelog.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: adventurelog
