manifests/seraphim/prod/adventurelog/Deployment-adventurelog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: adventurelog
    app.kubernetes.io/name: adventurelog
    app.kubernetes.io/part-of: adventurelog
    app.kubernetes.io/version: v0.12.1
  name: adventurelog
  namespace: adventurelog
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: adventurelog
      app.kubernetes.io/name: adventurelog
  template:
    metadata:
      labels:
        app.kubernetes.io/component: main
        app.kubernetes.io/instance: adventurelog
        app.kubernetes.io/name: adventurelog
        app.kubernetes.io/part-of: adventurelog
        app.kubernetes.io/version: v0.12.1
    spec:
      containers:
        - env:
            - name: FORCE_SOCIALACCOUNT_LOGIN
              value: "True"
            - name: ORIGIN
              value: https://adventurelog.vegapunk.cloud
            - name: PUBLIC_SERVER_URL
              value: https://adventurelog-backend.vegapunk.cloud
          image: ghcr.io/seanmorley15/adventurelog-frontend:v0.12.1
          name: adventurelog
          ports:
            - containerPort: 3000
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
