manifests/seraphim/prod/adventurelog/Service-adventurelog-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: adventurelog-backend
    app.kubernetes.io/name: adventurelog-backend
    app.kubernetes.io/part-of: adventurelog
    app.kubernetes.io/version: v0.12.0
  name: adventurelog-backend
  namespace: adventurelog
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: adventurelog-backend
