manifests/seraphim/prod/adventurelog/Service-adventurelog.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: adventurelog
    app.kubernetes.io/name: adventurelog
    app.kubernetes.io/part-of: adventurelog
    app.kubernetes.io/version: v0.12.1
  name: adventurelog
  namespace: adventurelog
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: adventurelog
