manifests/seraphim/prod/adventurelog/HTTPRoute-adventurelog-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: adventurelog-backend
    app.kubernetes.io/name: adventurelog-backend
    app.kubernetes.io/part-of: adventurelog
    app.kubernetes.io/version: v0.12.0
  name: adventurelog-backend
  namespace: adventurelog
spec:
  hostnames:
    - adventurelog-backend.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: adventurelog-backend
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
