manifests/seraphim/prod/adventurelog/HTTPRoute-adventurelog.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: adventurelog
    app.kubernetes.io/name: adventurelog
    app.kubernetes.io/part-of: adventurelog
    app.kubernetes.io/version: v0.12.1
  name: adventurelog
  namespace: adventurelog
spec:
  hostnames:
    - adventurelog.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: adventurelog
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
